@@ -1,5 +1,8 @@
 console-setup (1.20) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
+  * Set default model to pc105 on powerpc/ps3 and powerpc/cell systems.
+
   [ Debconf templates translations ]
   * Belarusian. Closes: #447109
   * Galician. Closes: #447940
